[gd_scene load_steps=31 format=2]

[ext_resource path="res://assets/images/gui/buildings/panel.png" type="Texture" id=1]
[ext_resource path="res://files/Blacksmith/Blacksmith.gd" type="Script" id=2]
[ext_resource path="res://assets/images/gui/buildings/buttonpanel.png" type="Texture" id=3]
[ext_resource path="res://assets/images/gui/buildings/buttonhl.png" type="Texture" id=4]
[ext_resource path="res://assets/images/gui/buildings/buttonpress.png" type="Texture" id=5]
[ext_resource path="res://assets/images/gui/buildings/button.png" type="Texture" id=6]
[ext_resource path="res://assets/images/backgrounds/forge.png" type="Texture" id=7]
[ext_resource path="res://assets/images/sprites/EmberHappy.png" type="Texture" id=8]
[ext_resource path="res://src/Clickable_Sprite.gd" type="Script" id=9]
[ext_resource path="res://assets/images/gui/exclamation.png" type="Texture" id=10]
[ext_resource path="res://assets/images/gui/taskmenu/workerpanel.png" type="Texture" id=11]
[ext_resource path="res://files/ItemShader.tres" type="Material" id=12]
[ext_resource path="res://assets/images/gui/buildings/itemcreationpanel.png" type="Texture" id=13]
[ext_resource path="res://assets/images/gui/buildings/ui_framebackground.png" type="Texture" id=14]
[ext_resource path="res://assets/images/iconsgear/AxeBasic.png" type="Texture" id=15]
[ext_resource path="res://assets/images/gui/ui_slot_cross.png" type="Texture" id=16]
[ext_resource path="res://assets/images/gui/text scene/textbutton.png" type="Texture" id=17]
[ext_resource path="res://assets/images/gui/text scene/textbuttonpressed.png" type="Texture" id=18]
[ext_resource path="res://assets/images/gui/text scene/textbuttonhl.png" type="Texture" id=19]
[ext_resource path="res://assets/images/gui/text scene/textbuttondisabled.png" type="Texture" id=20]
[ext_resource path="res://MainFont.tres" type="DynamicFont" id=21]
[ext_resource path="res://assets/images/gui/buildings/itemcreationpanel2.png" type="Texture" id=22]
[ext_resource path="res://assets/images/gui/taskmenu/repairgui.png" type="Texture" id=23]
[ext_resource path="res://assets/images/gui/inventory/itemicon1.png" type="Texture" id=24]
[ext_resource path="res://assets/images/gui/inventory/itemicon4.png" type="Texture" id=25]
[ext_resource path="res://assets/images/gui/inventory/itemicon2.png" type="Texture" id=26]
[ext_resource path="res://assets/images/gui/stone.jpg" type="Texture" id=27]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 293, 79 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 293, 80 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 293, 79 )

[node name="Blacksmith" type="TextureRect"]
margin_left = 35.0
margin_top = 54.0
margin_right = 1826.0
margin_bottom = 984.0
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="ButtonPanel" type="TextureRect" parent="."]
margin_left = 120.0
margin_top = 23.0
margin_right = 542.0
margin_bottom = 689.0
texture = ExtResource( 3 )

[node name="CraftButton" type="Button" parent="ButtonPanel"]
margin_left = 63.0
margin_top = 282.0
margin_right = 356.0
margin_bottom = 361.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "CRAFT"

[node name="RepairButton" type="Button" parent="ButtonPanel"]
visible = false
margin_left = 63.0
margin_top = 362.0
margin_right = 356.0
margin_bottom = 441.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "REPAIR"

[node name="Label" type="Label" parent="ButtonPanel"]
margin_left = 78.0
margin_top = 159.0
margin_right = 317.0
margin_bottom = 183.0
text = "BLACKSMITH"
align = 1

[node name="BG" type="TextureRect" parent="."]
show_behind_parent = true
margin_left = 1.0
margin_top = 10.0
margin_right = 1779.0
margin_bottom = 928.0
mouse_filter = 2
texture = ExtResource( 7 )
expand = true
stretch_mode = 7

[node name="Sprite" type="TextureButton" parent="."]
show_behind_parent = true
margin_left = 972.0
margin_top = -51.0
margin_right = 1720.0
margin_bottom = 926.0
texture_normal = ExtResource( 8 )
expand = true
stretch_mode = 6
script = ExtResource( 9 )
charname = "ember"

[node name="QuestActive" type="TextureRect" parent="Sprite"]
visible = false
margin_left = 525.0
margin_top = 71.0
margin_right = 666.0
margin_bottom = 217.0
mouse_filter = 2
texture = ExtResource( 10 )
expand = true
stretch_mode = 6

[node name="ItemSelection" type="TextureRect" parent="."]
visible = false
margin_left = 570.0
margin_top = 60.0
margin_right = 1219.0
margin_bottom = 848.0
texture = ExtResource( 11 )

[node name="ScrollContainer" type="ScrollContainer" parent="ItemSelection"]
margin_left = 56.0
margin_top = 100.0
margin_right = 926.0
margin_bottom = 743.0
scroll_horizontal_enabled = false

[node name="GridContainer" type="GridContainer" parent="ItemSelection/ScrollContainer"]
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 5

[node name="Button" type="TextureButton" parent="ItemSelection/ScrollContainer/GridContainer"]
visible = false
material = ExtResource( 12 )
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
expand = true

[node name="ItemCreationWindow" type="TextureRect" parent="."]
margin_left = 321.0
margin_top = 2.0
margin_right = 1475.0
margin_bottom = 881.0
texture = ExtResource( 13 )
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="ItemCreationWindow"]
show_behind_parent = true
margin_left = 44.0
margin_top = 103.0
margin_right = 1051.0
margin_bottom = 735.0
texture = ExtResource( 14 )
expand = true

[node name="Part1Descript" type="RichTextLabel" parent="ItemCreationWindow"]
margin_left = 219.0
margin_top = 119.0
margin_right = 564.0
margin_bottom = 285.0
custom_colors/default_color = Color( 0, 0, 0, 1 )

[node name="Part2Descript" type="RichTextLabel" parent="ItemCreationWindow"]
margin_left = 223.0
margin_top = 339.0
margin_right = 563.0
margin_bottom = 506.0
custom_colors/default_color = Color( 0, 0, 0, 1 )

[node name="Part3Descript" type="RichTextLabel" parent="ItemCreationWindow"]
margin_left = 220.0
margin_top = 574.0
margin_right = 564.0
margin_bottom = 730.0
custom_colors/default_color = Color( 0, 0, 0, 1 )

[node name="EndItem" type="TextureRect" parent="ItemCreationWindow"]
show_behind_parent = true
margin_left = 819.0
margin_top = 131.0
margin_right = 945.0
margin_bottom = 266.0
texture = ExtResource( 15 )
expand = true
stretch_mode = 6

[node name="Part1" type="TextureButton" parent="ItemCreationWindow"]
show_behind_parent = true
margin_left = 51.0
margin_top = 144.0
margin_right = 172.0
margin_bottom = 261.0
expand = true
stretch_mode = 5

[node name="number" type="Label" parent="ItemCreationWindow/Part1"]
margin_left = 83.0
margin_top = 96.0
margin_right = 121.0
margin_bottom = 120.0
text = "1"
align = 1

[node name="TextureRect" type="TextureRect" parent="ItemCreationWindow/Part1"]
show_behind_parent = true
margin_right = 121.0
margin_bottom = 117.0
texture = ExtResource( 16 )
stretch_mode = 4

[node name="Part2" type="TextureButton" parent="ItemCreationWindow"]
show_behind_parent = true
margin_left = 50.0
margin_top = 362.0
margin_right = 172.0
margin_bottom = 484.0
expand = true
stretch_mode = 5

[node name="number" type="Label" parent="ItemCreationWindow/Part2"]
margin_left = 83.0
margin_top = 96.0
margin_right = 121.0
margin_bottom = 120.0
text = "1"
align = 1

[node name="TextureRect2" type="TextureRect" parent="ItemCreationWindow/Part2"]
show_behind_parent = true
margin_right = 121.0
margin_bottom = 117.0
texture = ExtResource( 16 )
stretch_mode = 4

[node name="Part3" type="TextureButton" parent="ItemCreationWindow"]
show_behind_parent = true
margin_left = 49.0
margin_top = 591.0
margin_right = 171.0
margin_bottom = 711.0
expand = true
stretch_mode = 5

[node name="number" type="Label" parent="ItemCreationWindow/Part3"]
margin_left = 83.0
margin_top = 96.0
margin_right = 121.0
margin_bottom = 120.0
text = "1"
align = 1

[node name="TextureRect3" type="TextureRect" parent="ItemCreationWindow/Part3"]
show_behind_parent = true
margin_right = 121.0
margin_bottom = 117.0
texture = ExtResource( 16 )
stretch_mode = 4

[node name="CreateItem" type="TextureButton" parent="ItemCreationWindow"]
margin_left = 507.0
margin_top = 775.0
margin_right = 645.0
margin_bottom = 843.0
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 18 )
texture_hover = ExtResource( 19 )
texture_disabled = ExtResource( 20 )

[node name="Label" type="Label" parent="ItemCreationWindow/CreateItem"]
margin_left = 14.0
margin_top = 21.0
margin_right = 126.0
margin_bottom = 45.0
text = "CRAFT"
align = 1

[node name="MaterialSelect" type="TextureRect" parent="ItemCreationWindow"]
visible = false
margin_right = 649.0
margin_bottom = 788.0
texture = ExtResource( 11 )

[node name="Container" type="ScrollContainer" parent="ItemCreationWindow/MaterialSelect"]
margin_left = 38.0
margin_top = 117.0
margin_right = 596.0
margin_bottom = 729.0
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="ItemCreationWindow/MaterialSelect/Container"]

[node name="Button" type="TextureButton" parent="ItemCreationWindow/MaterialSelect/Container/VBoxContainer"]
visible = false
margin_right = 550.0
margin_bottom = 128.0
rect_min_size = Vector2( 550, 128 )
expand = true

[node name="Icon" type="TextureRect" parent="ItemCreationWindow/MaterialSelect/Container/VBoxContainer/Button"]
margin_right = 128.0
margin_bottom = 128.0
expand = true
stretch_mode = 6

[node name="amount" type="Label" parent="ItemCreationWindow/MaterialSelect/Container/VBoxContainer/Button"]
margin_left = 88.0
margin_top = 100.0
margin_right = 120.0
margin_bottom = 124.0
custom_fonts/font = ExtResource( 21 )
text = "5"
align = 2

[node name="Label" type="Label" parent="ItemCreationWindow/MaterialSelect/Container/VBoxContainer/Button"]
margin_left = 164.0
margin_top = 30.0
margin_right = 512.0
margin_bottom = 97.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Material"
align = 1
valign = 1

[node name="PartLabel" type="Label" parent="ItemCreationWindow/MaterialSelect"]
margin_left = 151.0
margin_top = 44.0
margin_right = 456.0
margin_bottom = 68.0
text = "SELECTMATERIAL"
align = 1

[node name="EndItemDescript" type="RichTextLabel" parent="ItemCreationWindow"]
margin_left = 656.0
margin_top = 323.0
margin_right = 1109.0
margin_bottom = 747.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true

[node name="CraftProgress" type="TextureProgress" parent="ItemCreationWindow"]
margin_left = 718.0
margin_top = 99.0
margin_right = 1047.0
margin_bottom = 296.0
texture_progress = ExtResource( 22 )

[node name="RepairPanel" type="TextureRect" parent="."]
editor/display_folded = true
visible = false
margin_left = 570.0
margin_top = 60.0
margin_right = 1219.0
margin_bottom = 848.0
texture = ExtResource( 23 )

[node name="ScrollContainer" type="ScrollContainer" parent="RepairPanel"]
margin_left = 50.0
margin_top = 107.0
margin_right = 794.0
margin_bottom = 441.0
scroll_horizontal_enabled = false

[node name="GridContainer" type="GridContainer" parent="RepairPanel/ScrollContainer"]
columns = 8

[node name="Button" type="TextureButton" parent="RepairPanel/ScrollContainer/GridContainer"]
visible = false
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
toggle_mode = true
texture_normal = ExtResource( 24 )
texture_pressed = ExtResource( 25 )
texture_hover = ExtResource( 26 )
expand = true

[node name="Icon" type="TextureRect" parent="RepairPanel/ScrollContainer/GridContainer/Button"]
show_behind_parent = true
margin_right = 64.0
margin_bottom = 64.0
mouse_filter = 2
texture = ExtResource( 27 )
expand = true

[node name="Label" type="Label" parent="RepairPanel/ScrollContainer/GridContainer/Button"]
margin_left = 1.0
margin_top = 41.0
margin_right = 62.0
margin_bottom = 65.0
text = "100%"
align = 2

[node name="MatScrollContainer" type="ScrollContainer" parent="RepairPanel"]
margin_left = 62.0
margin_top = 550.0
margin_right = 594.0
margin_bottom = 626.0
scroll_vertical_enabled = false

[node name="HBoxContainer" type="HBoxContainer" parent="RepairPanel/MatScrollContainer"]
margin_right = 510.0
margin_bottom = 64.0
rect_min_size = Vector2( 510, 64 )
alignment = 1

[node name="Button" type="TextureRect" parent="RepairPanel/MatScrollContainer/HBoxContainer"]
visible = false
margin_left = 223.0
margin_right = 287.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
texture = ExtResource( 27 )
expand = true

[node name="Label" type="Label" parent="RepairPanel/MatScrollContainer/HBoxContainer/Button"]
margin_left = 21.0
margin_top = 43.0
margin_right = 61.0
margin_bottom = 67.0
text = "1"
align = 2

[node name="RepairConfirm" type="TextureButton" parent="RepairPanel"]
margin_left = 120.0
margin_top = 680.0
margin_right = 258.0
margin_bottom = 748.0
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 18 )
texture_hover = ExtResource( 19 )
texture_disabled = ExtResource( 20 )

[node name="Label" type="Label" parent="RepairPanel/RepairConfirm"]
margin_left = 22.0
margin_top = 22.0
margin_right = 115.0
margin_bottom = 46.0
text = "REPAIR"
align = 1

[node name="RepairAll" type="TextureButton" parent="RepairPanel"]
margin_left = 382.0
margin_top = 680.0
margin_right = 520.0
margin_bottom = 748.0
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 18 )
texture_hover = ExtResource( 19 )
texture_disabled = ExtResource( 20 )

[node name="Label" type="Label" parent="RepairPanel/RepairAll"]
margin_left = 2.0
margin_top = 22.0
margin_right = 133.0
margin_bottom = 46.0
text = "REPAIRALL"
align = 1

[node name="ResourceLabel" type="Label" parent="RepairPanel"]
margin_left = 202.0
margin_top = 492.0
margin_right = 432.0
margin_bottom = 516.0
text = "Required Resources"

[node name="Label" type="Label" parent="RepairPanel"]
margin_left = 181.0
margin_top = 44.0
margin_right = 440.0
margin_bottom = 68.0
text = "REPAIR"
align = 1

